# DistributedSim

./: CMakeLists.txt  README.md
include/: node.h  world.h
src/: main.cpp  node.cpp
